Создание клиентов бирж через фабрику